# QuicFuscate

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-quiche.yml  ci.yml  clippy-matrix.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/svelte-admin/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/svelte-admin/src/: app.css  app.html
apps/svelte-desktop/: package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
apps/svelte-desktop/src/: app.css
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs  state_store.rs
apps/web-admin-ui/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/web-admin-ui/src/: App.tsx  api.ts  index.css  main.tsx
assets/web-admin/: index.html
assets/web-admin/_app/: version.json
assets/web-admin/assets/: index--KSS8NQJ.js  index-BX6jbio5.css  index-BlTCtAJk.js  index-BvFf0f_z.css  index-C3FauvWy.css  index-CkMDWMgP.js  index-DJUWSbTk.js  index-DOC8fsmk.css  index-DXoaOXsb.js  index-DoV7uQ7E.js  index-Dp9y0YyZ.css  state-iiSFyfB0.js  ui-pwAOwm1L.js  vendor-heroui-theme-CWx1Tpwc.js  vendor-i18n-BlWJKEw5.js  vendor-icons-QGIf2wbj.js  vendor-motion-757dbCLw.js  vendor-react-core-Bpp4R8ks.js  vendor-state-dL53Rbod.js  vendor-ui-Cf6OX7Lh.js  vendor-vMomohIa.js
config/: admin-auth.json.example  quicfuscate.toml  server-linux.default.toml
docs/: CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  MAP.md
examples/: brain_probe.rs  compress_bench.rs  crypto_backend_bench.rs  engine_basic.rs  fec_sim.rs  microbench.rs  rng_bench.rs  shuffle_bench.rs  tun_factory_example.rs
scripts/benchmarks/: bench-ci-regression.sh  ci_regression.rs
scripts/benchmarks/micro/: micro-aes-block.sh  micro-aes-gcm.sh  micro-chacha-x4.sh  micro-crypto-all.sh  micro-ghash.sh  micro-udpfast-throughput.sh
scripts/benchmarks/smoke/: smoke-fec-quick.sh
scripts/benchmarks/suites/: bench-compression.sh  bench-crypto.sh  bench-fec-all.sh  bench-fec-simulation.sh  bench-fec.sh  bench-linux-send-path-decision.sh  bench-nightly.sh  bench-optimization.sh  bench-orchestrator.sh  bench-profile-transport-fastpaths.sh  bench-qpack-encode.sh  bench-retained-crypto-backends.sh  bench-stealth-brain.sh  bench-stealth.sh  bench-transport.sh
scripts/benchmarks/wrappers/: wrap-crypto.sh  wrap-fec.sh
scripts/install/: install-server-linux.sh  quicfuscate-server.service
scripts/lib/: lib-common.sh
scripts/tests/analysis/: analysis-coverage-summary.sh  analysis-dead-code-report.sh  analysis-scripts-quality.sh  analysis-suite-matrix.sh
scripts/tests/audits/: audit-all-comprehensive.sh  audit-readiness-gates.sh  audit-runtime-guardrails.sh
scripts/tests/fast/: test-fast-crypto.sh  test-fast-fec.sh
scripts/tests/fuzz/: .gitignore  Cargo.toml
scripts/tests/fuzz/fuzz_targets/: connection_handling.rs  crypto_operations.rs  fec_encoding.rs  frame_decoding.rs  packet_parsing.rs  varint_parsing.rs
scripts/tests/lib/: lib-common.sh
scripts/tests/rust/: rt-ack-merge-parity.rs  rt-admin-http-contract.rs  rt-anti-replay.rs  rt-argsort-parity.rs  rt-base64-decode-parity.rs  rt-baseline-oracles.rs  rt-bitmap-range-parity.rs  rt-bitstream-parity.rs  rt-brain-activation-parity.rs  rt-brain-histogram.rs  rt-cc-algorithms.rs  rt-chacha-x16-parity.rs  rt-chacha-x4-parity.rs  rt-cli-help.rs  rt-compress-preprocessor.rs  rt-core-connection-basics.rs  rt-ecn-popcount.rs  rt-fake-hmac.rs  rt-ghash-sse-parity.rs  rt-harness-cli.rs  rt-harness-udpfast.rs  rt-header-validate-parity.rs  rt-interface.rs  rt-io-hotpath-kernel-integration.rs  rt-iter-reduction-telemetry.rs  rt-iter-reductions.rs  rt-moving-average-parity.rs  rt-packet-number-parity.rs  rt-pnspace-ack-policy.rs  rt-probe-detection.rs  rt-profile-aegis-selection.rs  rt-profile-fuzz-parity.rs  rt-profile-overrides.rs  rt-property-suite.rs  rt-qftls-profiles.rs  rt-random-aes-ctr.rs  rt-reality-targets.rs  rt-ring-buffer-parity.rs  rt-security-suite.rs  rt-shuffle-parity.rs  (+23 more)
scripts/tests/smoke/: smoke-avx10.sh  smoke-sve2.sh  smoke-ui-frontends.sh
scripts/tests/suites/: test-core.sh  test-crypto.sh  test-desktop-webadmin-rust-integration.sh  test-e2e-admin-web.sh  test-e2e-integration.sh  test-e2e.sh  test-fec-all.sh  test-fec-auto-controller-proof.sh  test-fec-auto-controller-scenarios.sh  test-fec-e2e-loss.sh  test-fec-simulation.sh  test-fec.sh  test-optimization.sh  (+10 more)
scripts/utils/: dev.sh  util-analyze-codebase.sh  util-check-quality.sh  util-cleanup-workspace.sh  util-dev-uis-start.sh  util-dev-uis-stop.sh  util-release-source-package.sh  util-run-local-admin-web.sh  util-run-local-ui.sh  util-stop-local-admin-web.sh  util-stop-local-ui.sh
src/: accelerate.rs  brain.rs  compress.rs  core.rs  crypto.rs  env_utils.rs  fec.rs  harness.rs  instrumentation.rs  interface.rs  lib.rs  main.rs  metrics.rs  optimize.rs  profile.rs  qftls.rs  reality.rs  rng.rs  simd.rs  stealth.rs  time_source.rs  transport.rs
src/crypto/: aead.rs  aegis.rs  aes.rs  chacha.rs  gcm.rs  hkdf.rs  mod.rs  morus.rs  poly1305.rs  quic_kdf.rs  tests.rs
src/engine/: config.rs  engine.rs  mod.rs  qkey.rs
src/fec/: adaptive_reed_solomon.rs  fec_stream_tests.rs  fountain_codes.rs  gf16_tests.rs  gf_tables.rs  internal.rs  mod.rs  test_support.rs  tests.rs
src/implementations/: mod.rs
src/optimize/: brain.rs  compress.rs  iter.rs  memory.rs  mod.rs  random.rs  simd.rs  sort.rs  stealth.rs  string.rs  telemetry.rs  transport.rs  udp.rs  unsafe.rs  uring_batch.rs  x86_sse2.rs
src/simd/: arm_stream.rs  arm_varint.rs  x86_ack.rs  x86_header.rs
src/stealth/: mod.rs  tests.rs  tls_cover.rs
src/transport/: anti_replay.rs  batch.rs  config.rs  connection.rs  frames.rs  h3.rs  packet.rs  pn.rs  recovery.rs  udpfast.rs  uring.rs  xdp.rs
(+278 files in other folders)
