[package]
name = "quicfuscate-desktop"
version = "0.3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-autostart = "2.5.1"
quicfuscate = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
arboard = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", default-features = false, features = ["linux-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
